BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Key_Customer_Plan_Goal_BMS_CA__c.object
<CustomObject>
    <description>Created as child object to coaching report to catprure key customer&apos;s goals and plans.</description>
    <fields>
        <fullName>Coaching_Report_BMS_CA__c</fullName>
        <label>Coaching Report</label>
        <referenceTo>Coaching_Report_vod__c</referenceTo>
        <relationshipLabel>Key Customer Plan Goals</relationshipLabel>
        <relationshipName>Key_Customer_Plan_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Key_Customer_BMS_CA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Customer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>BMS - Institution, BMS - Individual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Key Customer Plan Goals</relationshipLabel>
        <relationshipName>Key_Customer_Plan_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Goal_BMS_CA__c</fullName>
        <label>Plan/Goal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Key Customer Plan Goal</label>
    <nameField>
        <displayFormat>Goal-{000000}</displayFormat>
        <label>Key Customer Plan Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Customer Plan Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>